package com.example.app.engine.components;

public interface Component {

    default void validate() { }
}

