@startuml
skinparam classAttributeIconSize 0
skinparam style strictuml

' =========================
' APPLICATION LAYER
' =========================
class GameMaster {
    - batch : SpriteBatch
    - font : BitmapFont
    - shapes : ShapeRenderer
    - ctx : EngineContext
    + create() : void
    + render() : void
    + display() : void
}

' =========================
' ENGINE CORE
' =========================
class EngineContext {
    - config : EngineConfig
    - sceneManager : SceneManager
    - entityManager : EntityManager
    - movementManager : MovementManager
    - collisionManager : CollisionManager
    - ioManager :IOManager
    - renderQueue : RenderQueue
    - clock : EngineClock
    - collisionEvents : EventBus<CollisionEvent>
    + EngineContext()
    + update(realDt : float): void
    + dispose() : void
}

class EngineConfig {
    + width : int
    + height : int
    + title : String
    + vsync : boolean
    + targetFps : int
    + fixedDt : float
    + maxSubSteps : int
    + collisionCellSize : float
    + EngineConfig(width : int, height : int, title : String)
    + EngineConfig(width : int, height : int, title : String, vsync : boolean, targetFps : int, fixedDt : float, maxSubSteps : int, collisionCellSize : float)
}

GameMaster *-- EngineContext
EngineContext o-- EngineConfig
GameMaster ..> EngineConfig

EngineContext o-- EntityManager
EngineContext o-- SceneManager
EngineContext o-- MovementManager
EngineContext o-- CollisionManager
EngineContext o-- IOManager
EngineContext *-- RenderQueue
EngineContext *-- EngineClock
EngineContext *-- EventBus


' =========================
' ECS - ENTITY LAYER
' =========================
class Entity {
    - id : int
    - components : Map<Class, Component>
    + Entity(id : int)
    + getId() : int
    + viewComponents() : Map<Class, Component>
    + addComponent<T : Component>(type : Class<T>, component : T) : void
    + getComponent<T : Component>(type : Class<T>) : Class<T>
    + hasComponent<T : Component>(type : Class<T>) : boolean
    + removeComponent<T : Component>(type : Class<T>) : void
    + updateComponent<T : Component>(type : Class<T>, component : T) : void
    + toString() : String
}

class EntityManager {
    - idGen : EntityIdGenerator
    - entities : List<Entity>
    - pendingDestroyIds : Set<Integer>
    + EntityManager()
    + create() : Entity
    + destroy(e : Entity) : void
    + update(dt : float) : void
    + getAll() : List<Entity>
    + getEntity(id : int) : Entity
}

class EntityIdGenerator {
    - next : AtomicInteger
    + nextId() : int
}

EntityManager *-- EntityIdGenerator
EntityManager o-- Entity
Entity o-- Component

' =========================
' COMPONENTS
' =========================
interface Component {
    validate() : void
}

class TransformComponent {
    + x : float
    + y : float
    + rotationDeg : float
    + TransformComponent(x : float, y : float)
}

class VelocityComponent {
    + vx : float
    + vy : float
    + VelocityComponent(vx : float, vy : float)
}

class AccelerationComponent {
    + ax : float
    + ay : float
    + AccelerationComponent(ax : float, ay : float)
}

/'
class ColliderComponent {
    + width : float
    + height : float
    + isStatic : boolean
}

class RenderableComponent {
    + shape : RenderShape
    + width : float
    + height : float
}
'/

Component <|-- TransformComponent
Component <|-- VelocityComponent
Component <|-- AccelerationComponent
'Component <|-- ColliderComponent
'Component <|-- RenderableComponent


' =========================
' MOVEMENT SYSTEM
' =========================
class MovementManager {
    - gravity : float
    - maxSpeed : float
    + MovementManager()
    + MovementManager(gravity : float, maxSpeed : float)
    + getGravity() : float
    + setGravity(gravity : float) : void
    + getMaxSpeed() : float
    + setMaxSpeed(maxSpeed : float) : void
    + update(dt : float, entities : Iterable<Entity>) : void
    + moveEntity(dt : float, e : Entity) : void
    + movePhysics(dt : float, e : Entity, t : TransformComponent, v : VelocityComponent) : void
}

'MovementManager --> EntityManager
MovementManager ..> Entity
MovementManager ..> TransformComponent
MovementManager ..> VelocityComponent
MovementManager ..> AccelerationComponent
MovementManager -..|> Component


' =========================
' COLLISION SYSTEM
' =========================
interface CollisionManager {
    update(dt : float, entities : Iterable<Entity>) : List<CollisionEvent>
}

class SimpleCollisionManager {
    - listeners : List<CollisionListener>
    - resolver : CollisionResolver
    - grid : SpatialHashGrid
    + SimpleCollisionManager()
    + SimpleCollisionManager(cellSize : float)
    + addListener(listener : CollisionListener)
    + setResolver(resolver : CollisionResolver)
    + update(dt : float, entities : Iterable<Entity>) : List<CollisionEvent>
    - passesFilter(a : ColliderComponent, b : ColliderComponent) : boolean
    - intersect(ta : TransformComponent, ca : ColliderComponent, tb : TransformComponent, cb : ColliderComponent) : CollisionManifold
    - circleCircle(ax : float, ay : float, ar : float, bx : float, by : float, br : float) : CollisionManifold
    - aabbAabb(ax : float, ay : float, ahw : float, ahh : float, bx : float, by : float, bhw : float, bhh : float) : CollisionManifold
    - circleAabb(cx : float, cy : float, cr : float, bx : float, by : float, bhw : float, bhh : float) : CollisionManifold
    - clamp(v : float, min : float, max : float) : float
}

class CollisionPair {
    - a : Entity
    - b : Entity
    + CollisionPair(a : Entity, b : Entity)
    + getA() : Entity
    + getB() : Entity
}

class CollisionManifold {
    + normalX : float
    + normalY : float
    + penetration : float
    + CollisionManifold(normalX : float, normalY : float, penetration : float)
}

interface CollisionResolver {
    resolve(a : Entity, b : Entity, manifold : CollisionManifold) : void
}

class CollisionEvent {
    - pair : CollisionPair
    - manifold : CollisionManifold
    + CollisionEvent(pair : CollisionPair, manifold : CollisionManifold)
    + getPair() : CollisionPair
    + getManifold() : CollisionManifold
}

interface CollisionListener {
    onCollision(event : CollisionEvent) : void
}

class SpatialHashGrid {
    - cellSize : float
    - buckets : Map<Long, List<Entity>>
    + SpatialHashGrid(cellSize : float)
    + clear() : void
    + insert(e : Entity, t : TransformComponent, c : ColliderComponent) : void
    + computeCandidatePairs() : Set<PairKey>
    - worldToCell(v : float) : int
    - pack(x : int, y : int) : long
}

SimpleCollisionManager ..> Entity
SimpleCollisionManager ..> ColliderComponent
SimpleCollisionManager ..> TransformComponent
SimpleCollisionManager ..|> CollisionManager
SimpleCollisionManager o-- CollisionListener
SimpleCollisionManager o-- CollisionResolver
SimpleCollisionManager ..> CollisionEvent
SimpleCollisionManager *-- SpatialHashGrid
CollisionEvent *-- CollisionPair
CollisionEvent *-- CollisionManifold
CollisionPair o-- Entity
ColliderComponent ..|> Component
CollisionListener ..> CollisionEvent
CollisionResolver ..> Entity
CollisionResolver ..> CollisionManifold
SpatialHashGrid ..> Entity
SpatialHashGrid ..> TransformComponent
SpatialHashGrid ..> ColliderComponent
@enduml